Bug 156570 - UI Accessibility warning not clickable
Summary: UI Accessibility warning not clickable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.1 rc
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-01 17:36 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-07 10:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (33.71 KB, application/vnd.oasis.opendocument.text)
2023-08-01 17:36 UTC, Gabor Kelemen (Collabora)
Details
The problematic warning (111.90 KB, image/png)
2023-08-01 17:36 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-01 17:36:26 UTC
Created attachment 188703 [details]
Example file from Writer

Attached example file has a Heading 2 formatted paragraph, which generates accessibilty warning "Outline levels should start with level 1, instead of level 2." 
but this is not clickable. 
This can be inconvenient in long documents.

1. Open attached document
2. Open the Accessibility sidebar
-> there is a warning "Outline levels should start with level 1, instead of level 2." but it's not clickable.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d0c12b155009599cc31f8eac353bb679db0afbec
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-08-01 17:36:45 UTC
Created attachment 188704 [details]
The problematic warning
Comment 2 Stéphane Guillou (stragu) 2023-08-02 09:35:59 UTC
Reproduced in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d16d86685afdf3d321cc282a39a65f38381b6eaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: fr-FR
Calc: threaded

As well as 7.6.0.1:

Version: 7.6.0.1 (X86_64) / LibreOffice Community
Build ID: 776eaf34564cbf3f034a0ba1fd1d5c32ff9ccf1c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-08-03 17:41:25 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/61845b3d9fed6a8b97e90ec12126d1e1e4cc18d0

tdf#156570 - A11Y - Fix heading accessibility warning not clickable

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-08-07 10:22:20 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/fb5e1b23d5e06aee3cc05b05f468efe781948db3

tdf#156570 - A11Y - Fix heading accessibility warning not clickable

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.