tdf#156570 - A11Y - Fix heading accessibility warning not clickable

Make "Wrong heading..." warning message clickable.

Change-Id: I90d2100551de523e9825cee8788d1c8bb914216c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155252
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155357
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>